--- a/static/bootstrap/custom/_demandbase.scss
+++ b/static/bootstrap/custom/_demandbase.scss
@@ -19,7 +19,7 @@
       width: 100%;
       bottom: 0;
       left: 0;
-	    background: $white;
+			background: $color-demandbase-dropdown-div-bg-border;
       padding: 0 0 0 5px;
       box-sizing: border-box;
       font-weight: 400
