--- a/static/bootstrap/custom/_breadcrumbs.scss
+++ b/static/bootstrap/custom/_breadcrumbs.scss
@@ -9,7 +9,7 @@
   list-style: none;
   background-color: $breadcrumb-bg;
   border-radius: $border-radius-base;
-  color: $dell-gray-medium;
+	color: $breadcrumb-color;
 
   > li {
     display: inline-block;
@@ -33,7 +33,7 @@
     }
 
     a {
-      color: $dell-gray-medium;
+			color: $breadcrumb-color;
       font-size: 12px;
     }
   }
