--- a/static/bootstrap/custom/_countries.scss
+++ b/static/bootstrap/custom/_countries.scss
@@ -37,7 +37,7 @@
   #country-selector {
     > div {
       display: none;
-      border-top: 1px solid #aaa;
+      border-top: 1px solid $country-selector-border-top-color;
     }
     &.open {
       > div {
@@ -46,9 +46,9 @@
     }
   }
   #country-popup {
-	  background-color: $white;
+    background-color: $country-popup-bg-color;
     a {
-      color: $dell-blue !important;
+      color: $country-popup-link-color !important;
     }
   }
 }
@@ -94,7 +94,7 @@
       -ms-transform: rotate(45deg);
       width: 20px;
       height: 20px;
-	    background: $white;
+      background: $country-popup-bg-color;
       z-index: 1;
     }
     >div:after {
@@ -102,7 +102,7 @@
     }
     >div>div {
       position: relative;
-	    background: $white;
+      background: $country-popup-bg-color;
       border-radius: 10px;
       -moz-border-radius: 10px;
       -webkit-border-radius: 10px;
@@ -113,15 +113,15 @@
       min-width: 100px;
     }
     a {
-      color: #0085c3 !important;
+      color: $country-popup-link-color !important;
       font-size: 13px;
       line-height: 16px;
       display: block;
       padding: 2px 5px !important;
       white-space: nowrap;
       &.active {
-        color: #fff !important;
-        background-color: #0085c3;
+        color: $country-popup-link-active-color !important;
+        background-color: $country-popup-link-active-bg-color;
       }
     }
   }
