Added comments to quest variables.
Change-Id: I54feba89f672d4902bb29bd450be320a0633b579

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -176,6 +176,7 @@ $icon-anchor-hover-color: $dell-blue;
 $icon-anchor-active-color: $dell-blue;
 
 //== Affix Nav (Zombie Nav)
+/* Start:Zombie Nav */
 $affix-border-color: #ccc;
 $affix-li-border-color: #ccc;
 $affix-li-active-border-color: $dell-blue;
@@ -193,7 +194,7 @@ $affix-xs-ul-border-color: #ccc;
 $affix-xs-li-border-color: #ccc;
 $affix-xs-li-active-hover-border-color: $white;
 $affix-xs-a-hover-bg: $gray-lighter;
-
+/* End:Zombie Nav */
 
 
 //== Components
