--- a/static/bootstrap/widgets/_events.scss
+++ b/static/bootstrap/widgets/_events.scss
@@ -10,7 +10,7 @@
   #event-container {
     padding: 0;
     border: 0;
-	  background-color: $white;
+		background-color: $event-container-off-canvas-bg-color;
   }
   > #right-rail-form {
     margin: -15px;
