--- a/static/bootstrap/widgets/_introduction-with-grey-box.scss
+++ b/static/bootstrap/widgets/_introduction-with-grey-box.scss
@@ -9,7 +9,7 @@
 }
 /*claim box*/
 .grey-box{
-  background-color: #eee;
+	background-color: $grey-box-bg-color;
   padding: 20px;
   display: inline-block;
   h3 {
