--- a/static/bootstrap/widgets/_content-teaser.scss
+++ b/static/bootstrap/widgets/_content-teaser.scss
@@ -12,8 +12,8 @@ a:hover .has-overlay h4 {
   padding: 0;
   height: 206px;
   .overlay {
-	  background: $white;
-    background-color: rgba(255, 255, 255, 0.9);
+		background: $has-overlay-bg;
+		background-color: $has-overlay-bg-color;
     width: 100%;
     padding: 11px 15px;
     position: absolute;
