--- a/static/bootstrap/widgets/_listing-entries.scss
+++ b/static/bootstrap/widgets/_listing-entries.scss
@@ -6,7 +6,7 @@
 }
 
 .listing-header {
-	color: $white;
+	color: $listing-header-color;
   padding: 0 0 0 10px;
   margin: 0;
   line-height: 30px;
@@ -15,9 +15,9 @@
 
 .listing-entries {
 	@include transition(opacity .1s ease);
-  color: #444;
+	color: $listing-entries-color;
   a {
-    color: #444;
+		color: $listing-entries-link-color;
     text-decoration: none;
     display: block;
     margin: 0 0 40px 0;
