--- a/static/bootstrap/widgets/_multiple-select.scss
+++ b/static/bootstrap/widgets/_multiple-select.scss
@@ -19,27 +19,27 @@
   text-align: left;
   white-space: nowrap;
   line-height: 30px;
-  color: #444;
+	color: $ms-choice-color;
   text-decoration: none;
-  border: 1px solid #ccc;
+	border: 1px solid $ms-choice-border-color;
   -webkit-border-radius: 1px;
   -moz-border-radius: 1px;
   border-radius: 1px;
-	background-color: $white;
+	background-color: $ms-choice-bg-color;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
   &:focus {
-    border-color: #007db8;
+		border-color: $ms-choice-focus-border-color;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 125, 184, 0.6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 125, 184, 0.6);
   }
   &.disabled {
-    background-color: #f4f4f4;
+		background-color: $ms-choice-disabled-bg-color;
     background-image: none;
-    border: 1px solid #ddd;
+		border: 1px solid $ms-choice-disabled-border-color;
     cursor: default;
   }
   > {
@@ -53,9 +53,9 @@
       text-overflow: ellipsis;
       display: block;
       padding-left: 8px;
-      color: #555;
+			color: $ms-choice-span-color;
       &.placeholder {
-        color: #555;
+				color: $ms-choice-placeholder-color;
       }
     }
     div {
@@ -80,9 +80,9 @@
   padding: 0;
   position: absolute;
   z-index: 900;
-	background: $white;
-  color: #000;
-  border: 1px solid #ccc;
+	background: $ms-drop-bg-color;
+	color: $ms-drop-text-color;
+	border: 1px solid $ms-drop-border-color;
   /*-webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;*/
@@ -118,14 +118,14 @@
     outline: 0;
     font-family: sans-serif;
     font-size: 1em;
-    border: 1px solid #aaa;
+		border: 1px solid $ms-search-input-border-color;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-    background: #fff url('/images/shared/multiple-select.png') no-repeat 100% -22px;
+		background: $ms-search-input-bg-color url('/images/shared/multiple-select.png') no-repeat 100% -22px;
     background: url('/images/shared/multiple-select.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
     background: url('/images/shared/multiple-select.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
     background: url('/images/shared/multiple-select.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
@@ -158,7 +158,7 @@
       padding-bottom: 0;
       margin-bottom: 2px;
       &:hover {
-        background: #cce5f1;
+				background: $ms-drop--hover-bg;
       }
       .disabled {
         opacity: .35;
@@ -182,7 +182,7 @@
         font-weight: 400;
         display: block;
         white-space: nowrap;
-        color: #007db8;
+				color: $ms-drop-label-color;
         padding: 3px;
         margin-bottom: 0;
         cursor: pointer;
@@ -220,12 +220,12 @@
     }
     .ms-choice > span {
       &.placeholder {
-        color: #007db8;
+				color: $ms-choice-xs-placeholder-color;
         &:hover, &:focus {
-          color: #00496c;
+					color: $ms-choice-xs-placeholder-hover-color;
         }
       }
-      color: #007db8;
+			color: $ms-choice-xs-span-color;
     }
   }
 }
