--- a/static/bootstrap/widgets/_simple-pagination.scss
+++ b/static/bootstrap/widgets/_simple-pagination.scss
@@ -10,8 +10,8 @@
 
     > a {
       padding: 6px 12px;
-      background-color: #eee;
-      border: 1px solid #ccc;
+      background-color: $pager-link-bg;
+      border: 1px solid $pager-border-color;
       border-radius: 1px;
     }
     a:active,
