--- a/static/bootstrap/widgets/_featured-products.scss
+++ b/static/bootstrap/widgets/_featured-products.scss
@@ -11,7 +11,7 @@
     }
   }
   .slick-prev, .slick-next {
-    border: 1px solid #eee;
+		border: 1px solid $featured-products-slick-border-color;
     padding: 5px 10px;
     width: auto;
     height: auto;
