Added comments to quest scss
Change-Id: Ie8eb66df9d61ec3691ab8b8d2a3a54df80e7306a

--- a/static/css/bootstrap-quest.scss
+++ b/static/css/bootstrap-quest.scss
@@ -1,5 +1,7 @@
 // Core variables and mixins
 @import "../bootstrap/custom/variables-quest";
+//Add variable override
+
 @import "../bootstrap/partials/mixins";
 @import "../bootstrap/custom/font-face";
 // Reset and dependencies
